@@ -9,6 +9,7 @@ import net.demilich.metastone.game.cards.Card;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -60,15 +61,10 @@ public class GreedyOptimizeTurn extends IntelligentBehaviour {
 	@Override
 	public Behaviour clone() {
 		try {
-			return new GreedyOptimizeTurn(heuristic.getClass().newInstance());
-		} catch (InstantiationException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-		} catch (IllegalAccessException e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
+			return new GreedyOptimizeTurn(heuristic.getClass().getConstructor().newInstance());
+		} catch (InstantiationException | NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
+			return null;
 		}
-		return null;
 	}
 
 	@Override
